--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				</div>
 			</div>
 			<div class="footer">
-				<p>&copy; <a href="https://decaded.ga" target="_blank">Decaded </a></p>
+				<p><a href ="https://github.com/Decaded/useless-website" target ="_blank">Github</a> || <a href ="https://www.youtube.com/watch?v=mMcCQkQ-suM" target ="_blank">Music used</a> || &copy; <a href="https://decaded.ga" target="_blank">Decaded </a>  </p>
 			</div>
 		</div>
 		<!-- load timer -->
