add meta info, move css to head

--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+		<meta name="description" content="Nya Nya" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<meta property="og:image" content="https://decaded.ga/dev/useless-website/images/tomoko-spinning.gif" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://decaded.ga/dev/useless-website/" />
+		<meta property="og:title" content="Useless website" />
+		<meta property="og:site_name" content="Dec did it again" />
+		<meta property="og:description" content="Nya Nya" />
+		<link rel="icon" sizes="16x16" type="image/png" href="https://decaded.ga/images/icon.png" />
+		<link rel="stylesheet" href="css/style.css" />
 		<title>Nya Nya</title>
 	</head>
 	<body class="rainbow">
@@ -23,7 +32,10 @@
 				</div>
 			</div>
 			<div class="footer">
-				<p><a href ="https://github.com/Decaded/useless-website" target ="_blank">Github</a> || <a href ="https://www.youtube.com/watch?v=mMcCQkQ-suM" target ="_blank">Music used</a> || &copy; <a href="https://decaded.ga" target="_blank">Decaded </a>  </p>
+				<p>
+					<a href="https://github.com/Decaded/useless-website" target="_blank">Github</a> || <a href="https://www.youtube.com/watch?v=mMcCQkQ-suM" target="_blank">Music used</a> ||
+					&copy; <a href="https://decaded.ga" target="_blank">Decaded </a>
+				</p>
 			</div>
 		</div>
 		<!-- load timer -->
@@ -35,5 +47,4 @@
 			document.querySelector(".footer p").innerHTML += d.getFullYear();
 		</script>
 	</body>
-	<link rel="stylesheet" href="css/style.css" />
 </html>
